--- a/app/globals.css
+++ b/app/globals.css
@@ -98,6 +98,17 @@ main {
   background-color: rgb(240, 242, 245);
 }
 
+.error {
+  width: 300px;
+  height: 48px;
+  border-radius: 5px;
+  outline: none;
+  border: 2px solid red;
+  padding: 5px;
+  padding-left: 12px;
+  background-color: rgb(240, 242, 245);
+}
+
 .form-signup > button {
   width: 300px;
   height: 48px;
