--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: 
+    radial-gradient(farthest-side,#FF5C00 94%,#0000) top/8px 8px no-repeat,
+    conic-gradient(#0000 30%,#ff801f);
+  -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+  animation: l13 1s infinite linear;
+}
+@keyframes l13{ 
+  100%{transform: rotate(1turn)}
+}
